--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   background-color: aliceblue;
 }
@@ -6,10 +7,10 @@ body, html {
 .parallax {
   /* The image used */
   /* background-image: url('img_parallax.jpg'); */
-  background-color: aliceblue; 
+  background-color: aliceblue;
 
   /* Full height */
-  height: 100%; 
+  height: 100%;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -33,14 +34,29 @@ body, html {
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: rgb(203, 74, 74);
+  background: linear-gradient(
+    180deg,
+    rgba(203, 74, 74, 1) 0%,
+    rgba(69, 203, 73, 1) 50%,
+    rgba(66, 101, 195, 1) 100%
+  );
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: rgb(203, 74, 74);
+  background: linear-gradient(
+    180deg,
+    rgba(203, 74, 74, 1) 0%,
+    rgba(69, 203, 73, 1) 50%,
+    rgba(66, 101, 195, 1) 100%
+  );
+  border-radius: 10px;
 }
