--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,16 @@ html {
   background-size: cover;
 }
 
+.section1 {
+  position: relative;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 25%;
+  min-height: 100%;
+}
+
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
 @media only screen and (max-device-width: 1366px) {
   .parallax {
