--- a/style/style.css
+++ b/style/style.css
@@ -1,77 +1,7 @@
 body, html{
   height:100%;
-  margin:0;
-  font-size:16px;
-  font-family:"Lato", sans-serif;
-  font-weight:400;
-  line-height:1.8em;
-  color:#666;
-}
-
-.section1, .section2, .section3{
-  position:relative;
-  opacity:0.70;
-  background-position:center;
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-attachment:fixed;
-}
-
-.section1{
-  background-color: white;
-  min-height:100%;
-}
-
-.section2{
-  background-color: white;
-  min-height: 100%;
-}
-
-.section3{
-  background-color: white;
-  min-height: 100%;
-}
-
-.section{
-  text-align:center;
-  padding:50px 80px;
-}
-
-.section-light{
-  background-color:#f4f4f4;
-  color:#666;
-}
-
-.section-dark{
-  background-color:#282e34;
-  color:#ddd;
-}
-
-.ptext{
-  position:absolute;
-  top:50%;
-  width:100%;
-  text-align:center;
-  color:#000;
-  font-size:27px;
-  letter-spacing:8px;
-  text-transform:uppercase;
-}
-
-.ptext .border{
-  background-color:#111;
-  color:#fff;
-  padding:10px;
-}
-
-.ptext .border.trans{
-  background-color:transparent;
-}
-
-@media(max-width:568px){
-  .pimg1, .pimg2, .pimg3{
-    background-attachment:scroll;
-  }
+  width: 1000px;
+  margin: 0 auto;
 }
 
 /* width */
