--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,31 @@
 body, html{
-  height:100%;
-  width: 1000px;
-  margin: 0 auto;
+  margin: 0;
+}
+
+.top-container {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
+.header {
+  padding: 10px 16px;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 102px;
 }
 
 /* width */
