--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,12 @@
-body, html{
+body {
   margin: 0;
-}
-
-.top-container {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
   padding: 10px 16px;
-  background: #555;
-  color: #f1f1f1;
+  background: white;
+  color: black;
 }
 
 .content {
