--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,11 @@
 body {
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
-  width: 1000px;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
 }
 
 .header {
@@ -12,6 +16,23 @@ body {
 
 .content {
   padding: 16px;
+}
+
+.main-box {
+  position: relative;
+  background-color: aliceblue;
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 50%;
+}
+
+.main-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 30px;
 }
 
 .sticky {
