--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,7 @@ body {
   background: -webkit-linear-gradient(0deg, rgba(203, 74, 74, 1) 0%,
     rgba(69, 203, 73, 1) 50%,
     rgba(66, 101, 195, 1) 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
