--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,31 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+nav {
+  float: right;
+  margin: auto 0;
+}
+
+ul {
+  margin: auto;
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  display: inline-block;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 .main {
   width: 80%;
   margin: 0 auto;
