--- a/style/style.css
+++ b/style/style.css
@@ -9,11 +9,11 @@ nav {
 }
 
 ul {
-  margin: auto;
   list-style-type: none;
   padding: 0;
   overflow: hidden;
   display: inline-block;
+  margin-right: 20px;
 }
 
 li {
@@ -50,9 +50,11 @@ li a {
 .main-box {
   background-color: aliceblue;
   margin: auto;
+  margin-top: 120px;
   width: 94%;
   height: 70vh;
   padding: 10px 50px;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .title-text {
