--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,21 @@ li a {
   color: white;
 }
 
+.title-box {
+  background-image: url("/img/background.png");
+  margin: auto;
+  width: 94%;
+  box-shadow: 5px 10px 18px #888888;
+  text-align: center;
+  padding: 4vh 0;
+}
+
+.title {
+  font-family: "Press Start 2P";
+  font-size: 2rem;
+  margin: auto;
+}
+
 .sticky {
   position: fixed;
   top: 0;
