--- a/style/style.css
+++ b/style/style.css
@@ -1,42 +1,44 @@
 body {
   margin: 0 auto;
   font-family: "Space Mono", monospace;
+  background-image: url('../img/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-nav {
-  float: right;
-  margin: auto 0;
+
+r {
+  color: #e06666;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-  overflow: hidden;
-  display: inline-block;
-  margin-right: 20px;
+g {
+  color:#6aa84f;
 }
 
-li {
-  float: left;
-  font-family: "Press Start 2P";
-  font-size: 2rem;
+bl {
+  color: #3d85c6;
 }
 
-li a {
-  display: inline-block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  margin: auto;
+.navbar > li {
+  margin-left: 10vw !important;
+}
+
+li, .p2p {
+  font-family: "Press Start 2P" !important;
+  font-size: 1.5rem !important;
 }
 
 li a:hover {
   background: -webkit-linear-gradient(
     0deg,
-    #e06666 0%,
-    #6aa84f 50%,
-    #3d85c6 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -50,7 +52,6 @@ li a:hover {
 
 #header {
   padding: 10px 16px;
-  background-image: url("/img/background.png");
   color: black;
   position: fixed;
   z-index: 9000;
@@ -61,6 +62,8 @@ li a:hover {
 
 #header.active {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  background-color: white !important;
+
 }
 
 .content {
@@ -72,12 +75,12 @@ li a:hover {
 }
 
 .main-box {
-  background-image: url("/img/background.png");
   margin: auto;
   margin-top: 120px;
   width: 94%;
   height: 67vh;
   box-shadow: 5px 10px 18px #888888;
+  background-color: white;
 }
 
 .title-div {
@@ -107,7 +110,6 @@ li a:hover {
 }
 
 .title-box {
-  background-image: url("/img/background.png");
   margin: auto;
   width: 94%;
   box-shadow: 5px 10px 18px #888888;
@@ -145,23 +147,36 @@ li a:hover {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(203, 74, 74);
-  background: linear-gradient(180deg, #e06666 0%, #6aa84f 50%, #3d85c6 100%);
+  background: linear-gradient(180deg,rgb(255, 89, 89),
+  rgb(255, 191, 71),
+  rgb(105, 255, 105),
+  rgb(119, 247, 247),
+  rgb(107, 107, 255),
+  rgb(255, 117, 255));
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(203, 74, 74);
-  background: linear-gradient(180deg, #e06666 0%, #6aa84f 50%, #3d85c6 100%);
+  background: linear-gradient(180deg,rgb(255, 89, 89),
+  rgb(255, 191, 71),
+  rgb(105, 255, 105),
+  rgb(119, 247, 247),
+  rgb(107, 107, 255),
+  rgb(255, 117, 255));
   border-radius: 10px;
 }
 
 .gradient {
   background: -webkit-linear-gradient(
     0deg,
-    #e06666 0%,
-    #6aa84f 50%,
-    #3d85c6 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   background-clip: text;
   -webkit-background-clip: text;
