--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,19 @@
 body {
   margin: 0 auto;
   font-family: "Space Mono", monospace;
-  background-image: url('../img/bg.jpg');
+  background-image: url("../img/bg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-
 r {
   color: #e06666;
 }
 
 g {
-  color:#6aa84f;
+  color: #6aa84f;
 }
 
 bl {
@@ -25,7 +24,8 @@ bl {
   margin-left: 10vw !important;
 }
 
-li, .p2p {
+li,
+.p2p {
   font-family: "Press Start 2P" !important;
   font-size: 1.5rem !important;
 }
@@ -63,7 +63,6 @@ li a:hover {
 #header.active {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   background-color: white !important;
-
 }
 
 .content {
@@ -147,24 +146,30 @@ li a:hover {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(203, 74, 74);
-  background: linear-gradient(180deg,rgb(255, 89, 89),
-  rgb(255, 191, 71),
-  rgb(105, 255, 105),
-  rgb(119, 247, 247),
-  rgb(107, 107, 255),
-  rgb(255, 117, 255));
+  background: linear-gradient(
+    180deg,
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
+  );
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(203, 74, 74);
-  background: linear-gradient(180deg,rgb(255, 89, 89),
-  rgb(255, 191, 71),
-  rgb(105, 255, 105),
-  rgb(119, 247, 247),
-  rgb(107, 107, 255),
-  rgb(255, 117, 255));
+  background: linear-gradient(
+    180deg,
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
+  );
   border-radius: 10px;
 }
 
