--- a/style/style.css
+++ b/style/style.css
@@ -31,18 +31,15 @@ li,
 }
 
 li a {
-    margin-right: 1vw;
+  margin-right: 1vw;
 }
 
 li a:hover {
   background: -webkit-linear-gradient(
     0deg,
-    rgb(255, 89, 89),
-    rgb(255, 191, 71),
-    rgb(105, 255, 105),
-    rgb(119, 247, 247),
-    rgb(107, 107, 255),
-    rgb(255, 117, 255)
+    #ff0000 0%,
+    #00ff08 50%,
+    #0044ff 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -55,8 +52,8 @@ li a:hover {
 }
 
 .header {
-    color: black;
-    background-color: white;
+  color: black;
+  background-color: white;
 }
 
 #header {
@@ -155,14 +152,11 @@ li a:hover {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(203, 74, 74);
-  background: linear-gradient(
-    180deg,
-    rgb(255, 89, 89),
-    rgb(255, 191, 71),
-    rgb(105, 255, 105),
-    rgb(119, 247, 247),
-    rgb(107, 107, 255),
-    rgb(255, 117, 255)
+  background: -webkit-linear-gradient(
+    270deg,
+    #ff0000 0%,
+    #00ff08 50%,
+    #0044ff 100%
   );
   border-radius: 10px;
 }
@@ -170,14 +164,11 @@ li a:hover {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(203, 74, 74);
-  background: linear-gradient(
-    180deg,
-    rgb(255, 89, 89),
-    rgb(255, 191, 71),
-    rgb(105, 255, 105),
-    rgb(119, 247, 247),
-    rgb(107, 107, 255),
-    rgb(255, 117, 255)
+  background: -webkit-linear-gradient(
+    270deg,
+    #ff0000 0%,
+    #00ff08 50%,
+    #0044ff 100%
   );
   border-radius: 10px;
 }
@@ -185,12 +176,9 @@ li a:hover {
 .gradient {
   background: -webkit-linear-gradient(
     0deg,
-    rgb(255, 89, 89),
-    rgb(255, 191, 71),
-    rgb(105, 255, 105),
-    rgb(119, 247, 247),
-    rgb(107, 107, 255),
-    rgb(255, 117, 255)
+    #ff0000 0%,
+    #00ff08 50%,
+    #0044ff 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
