--- a/style/style.css
+++ b/style/style.css
@@ -120,6 +120,7 @@ li a:hover {
   box-shadow: 5px 10px 18px #888888;
   text-align: center;
   padding: 4vh 0;
+  background-color: white;
 }
 
 .title {
