--- a/style/style.css
+++ b/style/style.css
@@ -146,6 +146,13 @@ li a:hover {
   display: inline-block;
 }
 
+.project-img {
+  display: inline-block;
+  margin: auto;
+  height: 25vw;
+  vertical-align: middle;
+}
+
 .sticky {
   position: fixed;
   top: 0;
