--- a/style/style.css
+++ b/style/style.css
@@ -45,9 +45,12 @@ li a {
 li a:hover {
   background: -webkit-linear-gradient(
     0deg,
-    #ff0000 0%,
-    #00ff08 50%,
-    #0044ff 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -60,9 +63,12 @@ li a:hover {
 .navbar-light .navbar-nav .show > .nav-linkk {
   background: -webkit-linear-gradient(
     0deg,
-    #ff0000 0%,
-    #00ff08 50%,
-    #0044ff 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -203,9 +209,12 @@ li a:hover {
   background: rgb(203, 74, 74);
   background: -webkit-linear-gradient(
     270deg,
-    #ff0000 0%,
-    #00ff08 50%,
-    #0044ff 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   border-radius: 10px;
 }
@@ -215,9 +224,12 @@ li a:hover {
   background: rgb(203, 74, 74);
   background: -webkit-linear-gradient(
     270deg,
-    #ff0000 0%,
-    #00ff08 50%,
-    #0044ff 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   border-radius: 10px;
 }
@@ -225,9 +237,12 @@ li a:hover {
 .gradient {
   background: -webkit-linear-gradient(
     0deg,
-    #ff0000 0%,
-    #00ff08 50%,
-    #0044ff 100%
+    rgb(255, 89, 89),
+    rgb(255, 191, 71),
+    rgb(105, 255, 105),
+    rgb(119, 247, 247),
+    rgb(107, 107, 255),
+    rgb(255, 117, 255)
   );
   background-clip: text;
   -webkit-background-clip: text;
