--- a/style/style.css
+++ b/style/style.css
@@ -130,7 +130,7 @@ li a:hover {
 
 .main-box {
   margin: auto;
-  margin-top: 120px;
+  margin-top: 14vh;
   width: 94%;
   height: 70vh;
   box-shadow: 5px 10px 18px #888888;
