--- a/style/style.css
+++ b/style/style.css
@@ -277,6 +277,7 @@ li a:hover {
 }
 
 .carousel-control-next,
-.carousel-control-prev {
+.carousel-control-prev,
+.carousel-indicators {
     filter: invert(100%);
 }
