--- a/style/style.css
+++ b/style/style.css
@@ -218,11 +218,19 @@ li a:hover {
   display: inline-block;
 }
 
+.icon {
+  height: 7vh;
+  width: 7vw;
+  display: block;
+  margin: 0 auto;
+  float: center;
+}
+
 .stretch {
   width: 100%;
   display: inline-block;
   font-size: 0;
-  line-height: 0
+  line-height: 0;
 }
 
 .carousel-control-next,
