--- a/public/style/style.css
+++ b/public/style/style.css
@@ -206,6 +206,11 @@ li a:hover {
   list-style: none;
 }
 
+.award-list li {
+  font-family: "Space Mono", monospace !important;
+  font-size: 3vh !important;
+}
+
 .award-list li:before {
   content: "\2B50";
   margin-left: -20px;
